tests/types/errors/comparison_type_error.mochi
let _ = "hi" < 3
